@@ -47,8 +47,8 @@ local spawn_table = function(level)
     local res = {}
     res[1] = { MOD_NAME .. '/zergling/' .. level, { { 0.0, 0.5 }, { 0.2, 0.4 }, { 0.4, 0.3 }, { 0.6, 0.3 }, { 0.8, 0.3 }, { 1.0, 0.0 }  } }
     res[2] = { MOD_NAME .. '/hydralisk/' .. level, { { 0.0, 0.4 }, { 0.2, 0.4 }, { 0.4, 0.4 }, { 0.6, 0.3 }, { 0.8, 0.2 }, { 1.0, 0.0 } } }
-    res[3] = { MOD_NAME .. '/lurker/' .. level, { { 0.0, 0.0 }, { 0.2, 0.0 }, { 0.4, 0.0 }, { 0.6, 0.1 }, { 0.8, 0.1 }, { 1.0, 0.1 } } }
-    res[4] = { MOD_NAME .. '/mutalisk/' .. level, { { 0.0, 0.1 }, { 0.2, 0.2 }, { 0.4, 0.3 }, { 0.6, 0.2 }, { 0.8, 0.1 }, { 1.0, 0.1 } } }
+    res[3] = { MOD_NAME .. '/lurker/' .. level, { { 0.0, 0.0 }, { 0.2, 0.0 }, { 0.4, 0.0 }, { 0.6, 0.0 }, { 0.8, 0.0 }, { 1.0, 0.1 } } }
+    res[4] = { MOD_NAME .. '/mutalisk/' .. level, { { 0.0, 0.1 }, { 0.2, 0.2 }, { 0.4, 0.3 }, { 0.6, 0.3 }, { 0.8, 0.25 }, { 1.0, 0.1 } } }
     res[5] = { MOD_NAME .. '/guardian/' .. level, { { 0.0, 0.0 }, { 0.2, 0.0 }, { 0.4, 0.0 }, { 0.6, 0.0 }, { 0.8, 0.0 }, { 1.0, 0.1 } } }
     res[6] = { MOD_NAME .. '/devourer/' .. level, { { 0.0, 0.0 }, { 0.2, 0.0 }, { 0.4, 0.0 }, { 0.6, 0.0 }, { 0.8, 0.1 }, { 1.0, 0.1 } } }
     res[7] = { MOD_NAME .. '/overlord/' .. level, { { 0.0, 0.0 }, { 0.2, 0.0 }, { 0.4, 0.0 }, { 0.6, 0.1 }, { 0.8, 0.1 }, { 1.0, 0.1 } } }
