@@ -8,6 +8,7 @@ Date: 02. 02. 2021
     - Move lurker spawn rate to tier 3
     - Reduce lurker attack range from max to 12
     - Change nyduspit spawn rates
+    - lower devourer range from 12 to 9
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
